# bookragthingy

./: .gitignore  README.md  main.py  pyproject.toml  requirement.txt  state.json  webscrapper.py
