[project]
name = "bookragthingy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "pymupdf>=1.27.1",
    "pypdf>=6.8.0",
    "selenium>=4.41.0",
    "sentence-transformers>=5.2.3",
]
